overall styles applied - finishing touches to come

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width initial-scale=1.0'>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>FS-App-Template</title>
     <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&family=Caveat:wght@600&family=Exo+2:ital,wght@0,400;1,100&family=Genos:wght@700&family=Mukta:wght@700&family=Noto+Serif+JP:wght@900&family=Orbitron:wght@400;600&family=Play:wght@700&family=Poppins:wght@200;300&family=Righteous&family=Roboto:wght@300&family=Source+Sans+Pro:wght@300&family=Teko:wght@300;600&family=Yanone+Kaffeesatz:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="/bundle.js"></script>
   </head>
   <body>
     <div id="app"></div>
   </body>
 </html>
-
